// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship API service fetches a list of version for an app 1`] = `
Array [
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "buildNumber": 32,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "certificateExpires": 2018-09-22T12:42:31.000Z,
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": 123,
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageUrl": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "size": 4567034,
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "buildNumber": 31,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "certificateExpires": 2018-09-21T12:42:31.000Z,
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": 123,
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageUrl": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "size": 4567034,
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "buildNumber": 30,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "certificateExpires": 2018-09-20T12:42:31.000Z,
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": 123,
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageUrl": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "size": 4567034,
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.3",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "version": "1.0.3",
  },
  Object {
    "appVersions": Array [
      Object {
        "appName": "Standup Timer",
        "buildNumber": 29,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "certificateExpires": 2018-09-29T12:42:31.000Z,
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": 123,
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageUrl": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "size": 4567034,
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
      Object {
        "appName": "Standup Timer",
        "buildNumber": 28,
        "buildSlug": "13245ads",
        "bundleId": "bundle-id",
        "certificateExpires": Date { NaN },
        "configuration": "canary",
        "description": "Some semi-long description",
        "distributionType": "development",
        "iconUrl": "http://placekitten.com/160/160",
        "id": 123,
        "keywords": "Keywords",
        "lastUpdate": 2018-09-22T12:42:31.000Z,
        "marketingUrl": "https://bitrise.io/marketing",
        "minimumOs": "10.2",
        "minimumSdk": "dunno",
        "packageName": "com.package.name",
        "platform": "ios",
        "promotionalText": "Promotional Text",
        "publicInstallPageUrl": "https://bitrise.io/app/8b334705d8e78276",
        "reviewNotes": "Review Notes",
        "scheme": "piramid",
        "size": 4567034,
        "supportUrl": "https://bitrise.io/support",
        "supportedDeviceTypes": Array [
          "iphone",
          "ipad",
        ],
        "version": "1.0.2",
        "whatsNew": "Some longer whats-new",
      },
    ],
    "version": "1.0.2",
  },
]
`;

exports[`Ship API service fetches a version for an app 1`] = `
Object {
  "appName": "Standup Timer",
  "buildNumber": 32,
  "buildSlug": "13245ads",
  "bundleId": "bundle-id",
  "certificateExpires": 2018-09-22T12:42:31.000Z,
  "configuration": "canary",
  "description": "Some semi-long description",
  "distributionType": "development",
  "iconUrl": "http://placekitten.com/160/160",
  "id": 123,
  "keywords": "Keywords",
  "lastUpdate": 2018-09-22T12:42:31.000Z,
  "marketingUrl": "https://bitrise.io/marketing",
  "minimumOs": "10.2",
  "minimumSdk": "dunno",
  "packageName": "com.package.name",
  "platform": "ios",
  "promotionalText": "Promotional Text",
  "publicInstallPageURL": "https://bitrise.io/app/8b334705d8e78276",
  "publicInstallPageUrl": undefined,
  "reviewNotes": "Review Notes",
  "scheme": "piramid",
  "size": 4567034,
  "supportUrl": "https://bitrise.io/support",
  "supportedDeviceTypes": Array [
    "iphone",
    "ipad",
  ],
  "version": "1.0.3",
  "whatsNew": "Some longer whats-new",
}
`;
